--- a/stage1frontend/src/components/About/About.css
+++ b/stage1frontend/src/components/About/About.css
@@ -1,12 +1,13 @@
 .about__section {
   font-family: "Roboto";
   width: 100%;
-  height: 624px;
+
   background-color: white;
   display: flex;
   justify-content: center;
   margin: 0;
-  padding: 0;
+  padding: 32px;
+  box-sizing: border-box;
 }
 
 .about__image {
@@ -14,6 +15,7 @@
   width: 464px;
   border-radius: 1000px;
   margin-top: 80px;
+  flex-shrink: 0;
 }
 
 .about__author-section {
@@ -22,21 +24,37 @@
 
 .about__author-header {
   margin-right: 216px;
-  margin-bottom: none;
+  /* margin-bottom: none; */
   margin-top: 131px;
-  /* width: 600px; */
-  height: 46px;
+  width: 100%;
+  /* height: 46px; */
   font-size: 40px;
 }
 
 .about__author-para {
+  font-family: "Roboto400";
+  font-size: 18px;
   margin-top: 24px;
+  /* height: 120px;
+  width: 600px; */
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1170px) {
+  .about__author-para {
+    font-family: "Roboto400";
+    font-size: 18px;
+    margin-top: 24px;
+    /* height: 120px;
+    width: 600px; */
+  }
+}
+
+@media screen and (max-width: 860px) {
   .about__section {
-    width: 768px;
-    height: 354px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
   }
 
   .about__image {
@@ -49,8 +67,7 @@
   }
 
   .about__author-header {
-    height: 24px;
-    width: 424px;
+    /* height: 24px; */
     margin-bottom: auto;
     margin-left: auto;
     margin-top: 40px;
@@ -64,15 +81,31 @@
   }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 515px) {
   .about__section {
+    font-family: "Roboto";
+    width: 100%;
+
+    background-color: white;
     display: flex;
-    width: 320px;
-    height: 354px;
-    z-index: 1;
+    flex-direction: column;
+    /* justify-content: center; */
+    margin: 0;
   }
 
   .about__author-section {
-    max-width: 320px;
+    max-width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .about__author-header {
+    height: 24px;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
