--- a/stage1frontend/src/components/App/App.css
+++ b/stage1frontend/src/components/App/App.css
@@ -1,6 +1,10 @@
 .page {
   background-color: #f3f3f3;
   font-family: "Roboto";
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  background-color: white;
 }
 
 .page__background {
