--- a/stage1frontend/src/components/Footer/Footer.css
+++ b/stage1frontend/src/components/Footer/Footer.css
@@ -4,21 +4,92 @@
   align-items: center;
   justify-content: space-between;
   width: 100%;
-  height: 80px;
+  margin-top: auto;
   background-color: #fff;
+}
+.footer-1__container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 37px;
+  margin-right: 20px;
 }
 
 .footer__content {
   margin-top: auto;
-  margin-right: 42px;
-  margin-left: 40px;
+  margin-left: 20px;
   margin-bottom: 24px;
   color: rgba(182, 188, 191, 1);
 }
 
+.footer-2__container {
+  display: flex;
+  gap: 30px;
+}
 .footer__content2 {
   margin-top: auto;
-  margin-right: 42px;
-  margin-left: 40px;
-  margin-bottom: 24px;
+}
+
+.footer-3__container {
+  display: flex;
+  gap: 30px;
+}
+.footer__content4 {
+  background-image: url(../../assets/github.svg);
+  background-repeat: no-repeat;
+}
+
+.footer__content5 {
+  background-image: url(../../assets/fb.svg);
+  background-repeat: no-repeat;
+}
+
+@media screen and (max-width: 515px) {
+  .footer {
+    flex-direction: column-reverse;
+  }
+
+  .footer-1__container {
+    display: flex;
+    width: 100%;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+
+  .footer-2__container {
+    display: flex;
+    gap: 0;
+    flex-direction: column;
+  }
+
+  .footer__content2 {
+    margin-top: auto;
+    margin-left: 20px;
+  }
+
+  .footer__content3 {
+    margin-left: 20px;
+  }
+
+  .footer-3__container {
+    display: flex;
+    margin-bottom: 65px;
+  }
+
+  .footer__content4 {
+    background-image: url(../../assets/github.svg);
+    background-repeat: no-repeat;
+    margin-right: 20px;
+  }
+
+  .footer__content5 {
+    background-image: url(../../assets/fb.svg);
+    background-repeat: no-repeat;
+    margin-right: 20px;
+  }
+
+  .footer__content {
+    margin-top: auto;
+    color: rgba(182, 188, 191, 1);
+  }
 }
