--- a/stage1frontend/src/components/Header/Header.css
+++ b/stage1frontend/src/components/Header/Header.css
@@ -2,6 +2,9 @@
   font-family: "Roboto";
   color: #fff;
   border-bottom: 1px solid #fff;
+  background-image: url(../../../images/georgia-de-lotz--UsJoNxLaNo-unsplash.png);
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 .header__saved-articles {
@@ -10,16 +13,27 @@
   border-bottom: 1px solid #fff;
 }
 
-.header__bg {
-  background-image: url(../../../images/georgia-de-lotz--UsJoNxLaNo-unsplash.png);
-  background-size: cover;
-  background-repeat: no-repeat;
+.header_location_saved-news {
+  color: black;
+  background-color: white;
+  border-bottom-color: black;
+  border-bottom-width: 1px;
+  background-image: none;
+}
+
+.header_mobile-menu-open {
+  color: white;
 }
 
 .nav__container {
   display: flex;
   align-items: center;
   border-bottom: 1px solid #fff;
+  position: relative;
+}
+
+.nav__container_mobile-menu-open {
+  background-color: #1a1b22;
 }
 
 .nav__container_saved-articles {
@@ -28,7 +42,14 @@
   border-bottom: 1px solid #fff;
 }
 
+.nav__container-sign-in {
+  height: 100%;
+  display: flex;
+  align-items: center;
+}
+
 .nav__title {
+  font-family: "RobotoSlab700";
   margin-top: 30px;
   margin-right: auto;
   margin-bottom: 26px;
@@ -36,9 +57,16 @@
 }
 
 .header__buttons {
+  font-family: "Roboto500";
   display: flex;
   margin-left: auto;
-  margin-right: 104px;
+  margin-top: 0;
+  margin-bottom: 0;
+  gap: 30px;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 104px;
 }
 
 .nav__home {
@@ -48,7 +76,8 @@
   color: #fff;
   background-color: transparent;
   border: none;
-  margin-top: 13px;
+
+  height: 100%;
 }
 
 .nav__sign-in {
@@ -74,38 +103,93 @@
   align-items: center;
   background-color: transparent;
   border: none;
+  text-decoration: none;
   /* border-radius: 80px;
   border: 1px, solid, #fff; */
   text-decoration: none;
   padding-left: 10px;
   padding-right: 10px;
-  height: 48px;
+  height: 100%;
   width: 176px;
+}
+
+.logout__button-container {
+  height: 100%;
+  display: flex;
+  align-items: center;
+}
+
+.menu__button {
+  display: flex;
+  background-image: url(../../assets/menu.svg);
+  width: 24px;
+  height: 24px;
+  border: none;
+  background-color: transparent;
+  margin-left: auto;
+  color: #fff;
+  margin-right: 16px;
+  display: none;
+}
+
+.menu__button_color_black {
+  background-image: url(../../assets/menu-black.svg);
+}
+
+.menu__button_type_close {
+  background-image: url(../../assets/close.svg);
 }
 
 .logout__button {
   border-radius: 80px;
   border: 1px, solid, #fff;
   background-color: transparent;
-  background-image: url(../../assets/logout.png);
-  background: no-repeat;
   color: #fff;
   border-radius: 100px;
   width: 112px;
   height: 48px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+  position: relative;
+}
+
+.button__text {
+  margin-right: 40px;
+}
+
+.logout__icon {
+  background-image: url(../../assets/logout.png);
+  color: #fff;
+  width: 24px;
+  height: 24px;
+  position: absolute;
+  right: 15px;
+  border: none;
 }
 
 @media screen and (max-width: 768px) {
-  .nav__container {
-    width: 768px;
+  .header {
+    width: 100%;
+    background-repeat: no-repeat;
   }
+
+  .header-buttons__container {
+  }
+
+  /* .menu__button {
+    display: none;
+  } */
 
   .nav__title {
     margin-left: 40px;
   }
 
   .header__buttons {
-    margin-right: 40px;
+    margin-left: auto;
+    right: 17px;
+    gap: 32px;
   }
 
   .header__bg {
@@ -113,19 +197,93 @@
   }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 515px) {
   .nav__container {
-    width: 320px;
+    width: 100%;
+    position: relative;
   }
 
-  .header__buttons {
-    visibility: hidden;
+  .nav__home {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    color: #fff;
+    background-color: transparent;
+    border: none;
+    margin-top: 40px;
+    margin-left: 16px;
+  }
+
+  .logout__button {
+    border-radius: 80px;
+    border: 1px, solid, #fff;
+    background-color: transparent;
+    color: #fff;
+    border-radius: 100px;
+    width: 112px;
+    height: 48px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+    position: relative;
+  }
+
+  .nav__saved-news {
+    display: flex;
+    flex-direction: row;
+    color: #fff;
+    justify-content: center;
+    align-items: center;
+    background-color: transparent;
+    border: none;
+    text-decoration: none;
+    /* border-radius: 80px;
+    border: 1px, solid, #fff; */
+    text-decoration: none;
+    padding-left: 10px;
+    padding-right: 10px;
+    height: 48px;
+    width: 130px;
   }
 
   .menu__button {
-    background-color: transparent;
-    color: #000000;
-    background-image: url(../../assets/menu.png);
+    display: flex;
+    width: 24px;
+    height: 24px;
     border: none;
+    background-color: transparent;
+    margin-right: 16px;
+    color: black;
+    margin-right: 16px;
+  }
+
+  .nav__sign-in {
+    margin-left: auto;
+    margin-right: auto;
+    width: 288px;
+    height: 56px;
+    padding: 0px;
+    margin-top: 30px;
+  }
+  .header-buttons__container {
+    width: 100%;
+    position: absolute;
+    top: 66px;
+    background-color: #1a1b22;
+    border-top: 1px solid #fff;
+    visibility: hidden;
+  }
+
+  .header-buttons__container-visible {
+    visibility: visible;
+  }
+
+  .header__buttons {
+    /* display: none; */
+    flex-direction: column;
+    padding-left: 0px;
+    position: initial;
+    margin-right: 0;
   }
 }
