--- a/stage1frontend/src/components/ModalWithForm/ModalWithForm.css
+++ b/stage1frontend/src/components/ModalWithForm/ModalWithForm.css
@@ -17,14 +17,17 @@
 }
 
 .modal__title {
-  margin: 0;
-  font-size: 16px;
+  font-family: "Roboto900";
+  font-size: 24px;
+  line-height: 100%;
   margin-bottom: 24px;
 }
 
 .modal__label {
-  font-size: 16px;
+  font-family: "Inter400";
   margin-bottom: 24px;
+  color: #2f71e5;
+  font-size: 14px;
 }
 
 .modal__label_type_radio {
@@ -70,6 +73,7 @@
   border-bottom: 1px solid #000;
   text-underline-offset: 4px;
   width: 100%;
+  font-size: 12px;
 }
 
 .modal__legend {
@@ -82,6 +86,8 @@
 }
 
 .modal__submit-btn {
+  font-family: "Roboto500";
+  font-size: 18px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -97,6 +103,23 @@
 }
 
 .modal__submit-btn2 {
+  font-family: "Inter400";
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 36px;
+  margin-top: 16px;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: #fff;
+  border: none;
+  border-radius: 8px;
+  color: rgba(0, 0, 0, 0.5);
+}
+
+.modal__submit-btn2:hover {
+  font-family: "Inter400";
+  color: #2f71e5;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -114,12 +137,12 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 124px;
-  height: 36px;
+  width: 360px;
+  height: 64px;
   margin-top: 42px;
   background-color: #000;
   border: none;
-  border-radius: 8px;
+  border-radius: 100px;
   color: #fff;
 }
 
@@ -144,7 +167,6 @@
 
   .modal__content {
     width: 430px;
-    height: 380px;
     background-color: #fff;
     position: relative;
     padding: 28px 28px 36px;
