--- a/stage1frontend/src/components/Results/Results.css
+++ b/stage1frontend/src/components/Results/Results.css
@@ -1,12 +1,17 @@
-.results__container {
-  height: 974px;
+.results {
   width: 100%;
   background-color: rgba(245, 246, 247, 1);
+  display: flex;
+  padding-top: 80px;
+  flex-direction: column;
   font-family: "Roboto";
 }
 
+.results__search-loader {
+  text-align: center;
+}
+
 .results__title {
-  padding-top: 80px;
   margin-right: auto;
   padding-left: 104px;
   margin-bottom: 64px;
@@ -27,7 +32,20 @@
 
 .show-more__button {
   margin-top: 64px;
-  position: absolute;
+  margin-bottom: 64px;
+  margin-left: auto;
+  margin-right: auto;
+  left: 576px;
+  background-color: #fff;
+  border-radius: 100px;
+  border: solid, 1px, #fff;
+  width: 288px;
+  height: 64px;
+  color: black;
+}
+
+.show-more__button:hover {
+  margin-top: 64px;
   left: 576px;
   background-color: rgba(232, 232, 232, 1);
   border-radius: 100px;
@@ -38,10 +56,6 @@
 }
 
 @media screen and (max-width: 768px) {
-  .results__container {
-    width: 768px;
-    height: 654px;
-  }
   .results__title {
     padding-top: 0px;
     margin-right: auto;
@@ -51,7 +65,6 @@
   }
 
   .show-more__button {
-    position: absolute;
     left: 270px;
     margin-top: 22px;
     width: 240px;
@@ -59,33 +72,42 @@
     background-color: rgba(255, 255, 255, 1);
   }
 
+  .show-more__button:hover {
+    left: 20px;
+    margin-top: 22px;
+    width: 240px;
+    height: 56px;
+    background-color: rgba(232, 232, 232, 1);
+  }
+
   .results-section__list {
-    /* display: flex; */
-    /* flex-wrap: wrap; */
-    /* flex-direction: row;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
     gap: 16px;
-    justify-content: center; */
-    display: grid;
+    justify-content: center;
     gap: 40px 20px;
     padding: 0;
-    /* height: max-content; */
+    height: max-content;
     background-color: rgba(245, 246, 247, 1);
     font-family: "Roboto";
-    /* position: relative; */
+    position: relative;
   }
 }
 
-@media screen and (max-width: 320px) {
-  .results__container {
-    width: 320px;
-  }
-
+@media screen and (max-width: 515px) {
   .show-more__button {
-    position: absolute;
     left: 20px;
     margin-top: 22px;
     width: 240px;
     height: 56px;
     background-color: rgba(255, 255, 255, 1);
+  }
+  .show-more__button:hover {
+    left: 20px;
+    margin-top: 22px;
+    width: 240px;
+    height: 56px;
+    background-color: rgba(232, 232, 232, 1);
   }
 }
