--- a/stage1frontend/src/components/Searching/Searching.css
+++ b/stage1frontend/src/components/Searching/Searching.css
@@ -41,6 +41,8 @@
   margin-bottom: 80px;
 }
 .search__input {
+  font-family: "Roboto400";
+  font-size: 16px;
   height: 64px;
   width: 100%;
   border-radius: 100px;
@@ -48,6 +50,9 @@
 }
 
 .search__button {
+  font-family: "Roboto500";
+  font-size: 18px;
+  line-height: 24px;
   background-color: rgba(47, 113, 229, 1);
   border-radius: 100px;
   border: solid, 1px, rgba(47, 113, 229, 1);
@@ -65,7 +70,11 @@
     color: aliceblue;
     background-repeat: no-repeat;
     background-size: cover;
-    height: 576px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    /* height: 576px; */
     width: 100%;
     padding: 0;
   }
@@ -74,8 +83,8 @@
     font-size: 36px;
     margin-top: 38px;
     margin-bottom: 16px;
-    margin-right: 220px;
-    margin-left: 163px;
+    margin-right: auto;
+    margin-left: auto;
     height: 80px;
     width: 385px;
   }
@@ -83,8 +92,8 @@
   .search__explain {
     margin-top: 0px;
     margin-bottom: 48px;
-    margin-left: 160px;
-    margin-right: 152px;
+    margin-left: auto;
+    margin-right: auto;
     font-size: 18px;
     width: 452px;
     height: 48px;
@@ -111,15 +120,63 @@
   }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 515px) {
   .searching__header {
-    /* width: 285px;
-    height: 80px; */
     font-size: 36px;
+    margin-top: 38px;
+    margin-bottom: 16px;
+    margin-right: auto;
+    margin-left: auto;
+    height: 80px;
+    width: 100%;
+    max-width: 285px;
+  }
+
+  .search-bar__container {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .search__bar {
+    width: 288px;
+    max-width: 100%;
+    position: relative;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 80px;
+  }
+
+  .searching__container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-family: "Roboto400slab";
+    color: aliceblue;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 576px;
+    width: 100%;
+    padding: 0;
   }
 
   .search__explain {
-    width: 285px;
+    width: 100%;
     height: 80px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .search__input {
+    width: 288px;
+    height: 56px;
+  }
+
+  .search__button {
+    width: 288px;
+    height: 56px;
+    position: absolute;
+    top: 80px;
+    right: 0px;
   }
 }
