--- a/src/components/ModalWithForm/ModalWithForm.css
+++ b/src/components/ModalWithForm/ModalWithForm.css
@@ -130,7 +130,6 @@
   background-color: #fff;
   border: none;
   border-radius: 8px;
-  color: rgba(0, 0, 0, 0.5);
 }
 
 .modal__submit-btn:hover {
@@ -140,7 +139,7 @@
   width: 360px;
   height: 64px;
   margin-top: 42px;
-  background-color: #000;
+  background-color: #2f71e5;
   border: none;
   border-radius: 100px;
   color: #fff;
