--- a/src/components/Results/Results.css
+++ b/src/components/Results/Results.css
@@ -24,13 +24,14 @@
   gap: 16px;
   justify-content: center;
   padding: 0;
+  margin-top: 0px;
   height: max-content;
   background-color: rgba(245, 246, 247, 1);
   font-family: "Roboto";
   position: relative;
 }
 
-.show-more__button {
+.results_show-more__button {
   margin-top: 64px;
   margin-bottom: 64px;
   margin-left: auto;
@@ -44,7 +45,7 @@
   color: black;
 }
 
-.show-more__button:hover {
+.results_show-more__button:hover {
   margin-top: 64px;
   left: 576px;
   background-color: rgba(232, 232, 232, 1);
@@ -64,7 +65,7 @@
     margin-top: 40px;
   }
 
-  .show-more__button {
+  .results_show-more__button {
     left: 270px;
     margin-top: 22px;
     width: 240px;
@@ -72,7 +73,7 @@
     background-color: rgba(255, 255, 255, 1);
   }
 
-  .show-more__button:hover {
+  .results_show-more__button:hover {
     left: 20px;
     margin-top: 22px;
     width: 240px;
@@ -96,14 +97,14 @@
 }
 
 @media screen and (max-width: 515px) {
-  .show-more__button {
+  .results_show-more__button {
     left: 20px;
     margin-top: 22px;
     width: 240px;
     height: 56px;
     background-color: rgba(255, 255, 255, 1);
   }
-  .show-more__button:hover {
+  .results_show-more__button:hover {
     left: 20px;
     margin-top: 22px;
     width: 240px;
