--- a/src/components/Searching/Searching.css
+++ b/src/components/Searching/Searching.css
@@ -20,7 +20,7 @@
   margin-bottom: 0;
 }
 
-.search__explain {
+.searching_search__explain {
   font-family: "Roboto400";
   font-size: 18px;
   font-weight: 400;
@@ -32,7 +32,7 @@
   margin-bottom: 232px;
 }
 
-.search__bar {
+.searching_search__bar {
   width: 608px;
   max-width: 100%;
   position: relative;
@@ -40,7 +40,7 @@
   margin-right: auto;
   margin-bottom: 80px;
 }
-.search__input {
+.searching_search__input {
   font-family: "Roboto400";
   font-size: 16px;
   height: 64px;
@@ -49,7 +49,7 @@
   border: solid, 1px, #fff;
 }
 
-.search__button {
+.searching_search__button {
   font-family: "Roboto500";
   font-size: 18px;
   line-height: 24px;
@@ -89,7 +89,7 @@
     width: 385px;
   }
 
-  .search__explain {
+  .searching_search__explain {
     margin-top: 0px;
     margin-bottom: 48px;
     margin-left: auto;
@@ -99,7 +99,7 @@
     height: 48px;
   }
 
-  .search__bar {
+  .searching_search__bar {
     width: 448px;
     height: 56px;
     margin-bottom: 48px;
@@ -107,11 +107,11 @@
     margin-left: auto;
   }
 
-  .search__input {
+  .searching_search__input {
     height: 52px;
   }
 
-  .search__button {
+  .searching_search__button {
     width: 160px;
     height: 56px;
     position: absolute;
@@ -132,12 +132,12 @@
     max-width: 285px;
   }
 
-  .search-bar__container {
+  .searching_search-bar__container {
     display: flex;
     flex-direction: column;
   }
 
-  .search__bar {
+  .searching_search__bar {
     width: 288px;
     max-width: 100%;
     position: relative;
@@ -160,19 +160,19 @@
     padding: 0;
   }
 
-  .search__explain {
+  .searching_search__explain {
     width: 100%;
     height: 80px;
     margin-left: auto;
     margin-right: auto;
   }
 
-  .search__input {
+  .searching_search__input {
     width: 288px;
     height: 56px;
   }
 
-  .search__button {
+  .searching_search__button {
     width: 288px;
     height: 56px;
     position: absolute;
