--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -93,6 +93,15 @@
     margin: 0;
   }
 
+  .about__image {
+    height: 232px;
+    width: 232px;
+    border-radius: 1000px;
+    margin-top: 0px;
+    margin-bottom: 24px;
+    margin-left: 40;
+  }
+
   .about__author-section {
     max-width: 100%;
     display: flex;
@@ -107,5 +116,6 @@
     height: 24px;
     margin-left: auto;
     margin-right: auto;
+    margin-top: 0px;
   }
 }
