--- a/src/components/NoResults/NoResults.css
+++ b/src/components/NoResults/NoResults.css
@@ -8,3 +8,19 @@
   align-items: center;
   font-family: "Roboto";
 }
+
+.no-results__img {
+  background-image: url(../../assets/not-found_v1.svg);
+  background-repeat: none;
+}
+
+.no-results__header {
+  font-family: "Roboto400slab";
+}
+
+.no-results__text {
+  font-family: "Roboto400";
+  line-height: 24px;
+  color: #b6bcbf;
+  padding-left: 15px;
+}
