--- a/src/components/SuccessModal/SuccessModal.css
+++ b/src/components/SuccessModal/SuccessModal.css
@@ -30,11 +30,6 @@
   font-size: 14px;
 }
 
-.modal__label_type_radio {
-  margin-bottom: 8px;
-  display: flex;
-}
-
 .modal__close {
   background-image: url(../../assets/close.png);
   background-color: transparent;
@@ -58,7 +53,6 @@
   width: 100%;
   box-sizing: border-box;
   border-radius: 16px;
-  padding-top: 0px;
 }
 
 .modal__form {
@@ -82,11 +76,11 @@
   color: #000;
 }
 
-.modal_submit-btns {
+/* .modal_submit-btns {
   display: block;
-}
+} */
 
-.modal__submit-btn {
+/* .modal__submit-btn {
   font-family: "Roboto500";
   font-size: 18px;
   display: flex;
@@ -116,9 +110,9 @@
   border: none;
   border-radius: 8px;
   color: rgba(0, 0, 0, 0.5);
-}
+} */
 
-.modal__submit-btn2:hover {
+/* .modal__submit-btn2:hover {
   font-family: "Inter400";
   color: #2f71e5;
   display: flex;
@@ -131,9 +125,9 @@
   background-color: #fff;
   border: none;
   border-radius: 8px;
-}
+} */
 
-.modal__submit-btn:hover {
+/* .modal__submit-btn:hover {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -144,7 +138,7 @@
   border: none;
   border-radius: 100px;
   color: #fff;
-}
+} */
 
 @media screen and (max-width: 768px) {
   .modal {
