--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -61,6 +61,7 @@
     width: 100%;
     flex-direction: row;
     justify-content: space-between;
+    padding-left: 0px;
   }
 
   .footer-word-links__container {
