--- a/src/components/ArticleCard/ArticleCard.css
+++ b/src/components/ArticleCard/ArticleCard.css
@@ -185,9 +185,15 @@
 @media screen and (max-width: 768px) {
   .article-card {
     position: relative;
-
+    height: 420px;
+    width: 224px;
     background-color: #fff;
     justify-content: center;
+  }
+
+  .article-card__image {
+    width: 224px;
+    height: 150px;
   }
 
   .article__section {
