--- a/src/components/ModalWithForm/ModalWithForm.css
+++ b/src/components/ModalWithForm/ModalWithForm.css
@@ -96,7 +96,7 @@
   margin-top: 42px;
   margin-left: auto;
   margin-right: auto;
-  background-color: rgba(0, 0, 0, 0.3);
+  background-color: #e6e8eb;
   border: none;
   border-radius: 100px;
   color: #fff;
@@ -114,7 +114,7 @@
   background-color: #fff;
   border: none;
   border-radius: 8px;
-  color: rgba(0, 0, 0, 0.5);
+  color: #2f71e5;
 }
 
 .modal__submit-btn2:hover {
@@ -175,6 +175,13 @@
     border-radius: 16px;
     position: absolute;
     top: 207px;
+  }
+}
+
+@media screen and (max-width: 560px) {
+  .modal__close {
+    top: -68px;
+    right: 5px;
   }
 }
 
