--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -5,7 +5,7 @@
   flex-direction: column;
   min-height: 100vh;
   background-color: white;
-  max-width: 1440px;
+  max-width: 100%;
 }
 
 .page__background {
