--- a/src/components/Searching/Searching.css
+++ b/src/components/Searching/Searching.css
@@ -19,7 +19,7 @@
   margin-bottom: 0;
 }
 
-.searching__search__explain {
+.searching__search-explain {
   font-family: "Roboto400";
   font-size: 18px;
   font-weight: 400;
@@ -31,7 +31,7 @@
   margin-bottom: 88px;
 }
 
-.searching__search__bar {
+.searching__search-bar {
   width: 608px;
   max-width: 100%;
   position: relative;
@@ -39,7 +39,7 @@
   margin-right: auto;
   margin-bottom: 80px;
 }
-.searching__search__input {
+.searching__search-input {
   font-family: "Roboto400";
   font-size: 16px;
   height: 64px;
@@ -48,7 +48,7 @@
   border: solid, 1px, #fff;
 }
 
-.searching__search__button {
+.searching__search-button {
   font-family: "Roboto500";
   font-size: 18px;
   line-height: 24px;
@@ -86,7 +86,7 @@
     width: 385px;
   }
 
-  .searching__search__explain {
+  .searching__search-explain {
     margin-top: 0px;
     margin-bottom: 48px;
     margin-left: auto;
@@ -96,7 +96,7 @@
     height: 48px;
   }
 
-  .searching__search__bar {
+  .searching__search-bar {
     width: 448px;
     height: 56px;
     margin-bottom: 48px;
@@ -104,11 +104,11 @@
     margin-left: auto;
   }
 
-  .searching__search__input {
+  .searching__search-input {
     height: 52px;
   }
 
-  .searching__search__button {
+  .searching__search-button {
     width: 160px;
     height: 56px;
     position: absolute;
@@ -130,12 +130,12 @@
     max-width: 285px;
   }
 
-  .searching__search-bar__container {
+  .searching__search-bar-container {
     display: flex;
     flex-direction: column;
   }
 
-  .searching__search__bar {
+  .searching__search-bar {
     width: 288px;
     max-width: 100%;
     position: relative;
@@ -159,7 +159,7 @@
     padding: 20px;
   }
 
-  .searching__search__explain {
+  .searching__search-explain {
     max-width: 100%;
     height: 80px;
     margin-left: auto;
@@ -167,14 +167,14 @@
     margin-bottom: 122px;
   }
 
-  .searching__search__input {
+  .searching__search-input {
     width: 288px;
     height: 56px;
     position: absolute;
     right: -8px;
   }
 
-  .searching__search__button {
+  .searching__search-button {
     width: 288px;
     height: 56px;
     position: absolute;
